Mail Service Integrated

--- a/EmployeeManagement/appsettings.json
+++ b/EmployeeManagement/appsettings.json
@@ -16,7 +16,15 @@
     "Audience": "https://localhost:7244"
   },
 
+  "MailJetOptions": {
+    "ApiKey": "9102cffa096b27ed3698937bc53400af",
+    "SecretKey": "2670a41d2c9475b5a1cf4cc0ff134236"
+  },
 
+  "MailJetSetting": {
+    "FromMail": "EmployeeManagementLH@protonmail.com",
+    "FromName" : "Employee Mangement"
+  },
 
   "AllowedHosts": "*"
 }
